# nix-templates

./: .gitignore  .gitmodules  LICENSE  README.md  flake.nix
python-cuda/: README.md
python-cuda12/: .envrc  .gitignore  README.md  flake.nix  poetry.toml  pyproject.toml
rstudio-server-single-user/: flake.nix
vertex-ai/: flake.nix  vertex.nix
