[tool.poetry]
name = "python-cuda12"
version = "0.1.0"
description = ""
authors = ["Daniel Fahey <daniel.fahey@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.1"
numpy = "^1.26.2"
torchvision = "^0.16.2"
torchsde = "^0.2.6"
einops = "^0.7.0"
transformers = ">=4.25.1"
safetensors = ">=0.3.0"
aiohttp = "^3.9.3"
pyyaml = "^6.0.1"
pillow = "^10.2.0"
scipy = "^1.12.0"
tqdm = "^4.66.1"
psutil = "^5.9.8"
gitpython = "^3.1.41"
matrix-client = "0.4.0"
huggingface-hub = ">0.20"
importlib-metadata = "^7.0.1"
opencv-python = ">=4.7.0.72"
filelock = "^3.13.1"
scikit-image = "^0.22.0"
python-dateutil = "^2.8.2"
mediapipe = "^0.10.9"
svglib = "^1.5.1"
fvcore = "^0.1.5.post20221221"
yapf = "^0.40.2"
omegaconf = "^2.3.0"
ftfy = "^6.1.3"
addict = "^2.4.0"
yacs = "^0.1.8"
trimesh = {extras = ["easy"], version = "^4.1.3"}
albumentations = "^1.3.1"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
